--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
        <img src="@pie.ImageThumbnailUrl" alt="No image" />
        <div class=" caption">
            <h3 class="pull-right">@pie.Price.ToString("c")</h3>
-           <a asp-controller="Home" asp-action="Details" asp-route-id="@pie.Id">@pie.Name</a>
+           <a asp-controller="Pie" asp-action="Details" asp-route-id="@pie.Id">@pie.Name</a>
            <p>@pie.ShortDescription</p>
        </div>
     </div>
